--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,9 @@
 .category-btn:hover span {
   color: white !important;
 }
+
+@media screen and (max-width: 600px) {
+  .search-bar {
+    width: 200px;
+  }
+}
