--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 ::-webkit-scrollbar {
   width: 0px;
   height: 1px;
@@ -50,8 +55,17 @@
   color: white !important;
 }
 
+.react-player {
+  height: 77vh !important;
+  width: 100% !important;
+}
+
 @media screen and (max-width: 600px) {
   .search-bar {
     width: 200px;
+  }
+
+  .react-player {
+      height: 45vh !important;
   }
 }
